// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FreeTextForm tests  rendering active form 1`] = `
<div
  className="columns"
>
  <div
    className="column"
  >
    <TextField
      disabled={false}
      error={null}
      fullWidth={true}
      label="Item name"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Please type the item name"
      required={false}
      select={false}
      value=""
    />
  </div>
  <div
    className="column is-narrow"
  >
    <RaisedButton
      className="is-mui-spacing-button"
      disabled={true}
      fullWidth={true}
      label="Add"
      labelPosition="after"
      onClick={[Function]}
      primary={true}
      secondary={false}
    />
  </div>
</div>
`;

exports[`FreeTextForm tests  rendering disabled form 1`] = `
<div
  className="columns"
>
  <div
    className="column"
  >
    <TextField
      disabled={true}
      error={null}
      fullWidth={true}
      label="Item name"
      onChange={[Function]}
      onKeyPress={[Function]}
      placeholder="Please type the item name"
      required={false}
      select={false}
      value=""
    />
  </div>
  <div
    className="column is-narrow"
  >
    <RaisedButton
      className="is-mui-spacing-button"
      disabled={true}
      fullWidth={true}
      label="Add"
      labelPosition="after"
      onClick={[Function]}
      primary={true}
      secondary={false}
    />
  </div>
</div>
`;

exports[`FreeTextForm tests  rendering reminder to add input 1`] = `
<div
  className="columns"
>
  <div
    className="column"
  >
    <TextField
      disabled={false}
      error={null}
      fullWidth={true}
      onChange={[Function]}
      onKeyPress={[Function]}
      required={false}
      select={false}
      value="one"
    />
    <div
      className="validationWarningMessage"
    >
      reminder text
    </div>
  </div>
  <div
    className="column is-narrow"
  >
    <RaisedButton
      className="is-mui-spacing-button"
      disabled={true}
      fullWidth={true}
      label="Add"
      labelPosition="after"
      onClick={[Function]}
      primary={true}
      secondary={false}
    />
  </div>
</div>
`;
